--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
             Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
         </div>
         <header>
-            <img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo">
+            <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
