--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
         </div>
         <header>
-            <img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo">
+            <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
@@ -21,7 +21,7 @@
         </header>
 
         <section class="hero">
-            <h2>Freshly Baked Every Morning</h2>
+            <h2>Contact Us</h2>
             <p>Small-batch artisanal goods crafted in the Sierra.</p>
         </section>
         <script src="scripts/main.js"></script>
