made the css more appealing

--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <div class="announcement-banner">
-            Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
-        </div>
-        <header>
-            <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="menu.html">Menu</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact Us</a>
-            </nav>
-        </header>
+        <div class="site-header-container">
+            <div class="announcement-banner">
+                Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
+            </div>
+            <header>
+                <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact Us</a>
+                </nav>
+            </header>
 
-        <section class="hero">
-            <h2>Freshly Baked Every Morning</h2>
-            <p>Small-batch artisanal goods crafted in the Sierra.</p>
-        </section>
+            <section class="hero">
+                <h2 class="hero-text">Freshly Baked Every Morning</h2>
+                <p class="hero-subtitle">Small-batch artisanal goods crafted in the Sierra.</p>
+            </section>
+        </div>
         <script src="scripts/main.js"></script>
 
     </body>
