--- a/menu.html
+++ b/menu.html
@@ -7,23 +7,26 @@
         <link rel="stylesheet" href="styles/style.css" />
     </head>
     <body>
-        <div class="announcement-banner">
-            Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
-        </div>
-        <header>
-            <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="menu.html">Menu</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact Us</a>
-            </nav>
-        </header>
 
-        <section class="hero">
-            <h2>Menu</h2>
-            <p>Friday, December 5th</p>
-        </section>
+        <div class="site-header-container">
+            <div class="announcement-banner">
+                Happy Holidays! 🎉 Closed: Dec 26, Jan 2, Jan 9
+            </div>
+            <header>
+                <a href="index.html"><img class="logo" src="images/sierra-bakehouse-logo.png" alt="sierra-bakehouse-logo"></a>
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact Us</a>
+                </nav>
+            </header>
+
+            <section class="hero">
+                <h2 class="hero-text">Menu</h2>
+                <p class="hero-subtitle">December 5th, 2025</p>
+            </section>
+        </div>
 
 
         <section class="menu-section">
