added custom fonts to make website look better. added a footer for contact info.

--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sierra Bakehouse</title>
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -27,7 +31,6 @@
                 <p class="hero-subtitle">December 5th, 2025</p>
             </section>
         </div>
-
 
         <section class="menu-section">
             <div class="tab">
@@ -173,6 +176,24 @@
             </div>
             <div class="notice">
                 <h3>Please choose a menu category above to see your options for today!</h3>
+            </div>
+        </section>
+        <hr class="lines">
+        <section class="footer">
+            <div class="footer-div">
+                <h2>Address</h2>
+                <p>10736 Pioneer Trail</p>
+                <p>Suite 12</p>
+                <p>​Truckee, CA 96161</p>
+            </div>
+            <div class="footer-div">
+                <h2>Hours</h2>
+                <p>Fridays 8:00 am - 2:00 pm</p>
+            </div>
+            <div class="footer-div">
+                <h2>Contact</h2>
+                <p>info@sierrabakehouse.com</p>
+                <p>(530) 562-9494</p>
             </div>
         </section>
         <script src="scripts/main.js"></script>
