--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sierra Bakehouse</title>
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="site-header-container">
@@ -26,6 +30,30 @@
                 <p class="hero-subtitle">Small-batch artisanal goods crafted in the Sierra.</p>
             </section>
         </div>
+        <div>
+            <p class="desc">Sierra Bakehouse was created by two friends, Daniella and Kristy, with a love and passion for baking.</p>
+            <p class="desc">​Our bakery was founded in 2018 in scenic Truckee California - a beautiful location that provides endless inspiration for our creations. We understand the importance of quality ingredients and put our heart and soul into every product we make. Our goal is to introduce people to new and exciting flavors while staying true to traditional favorites, and to create an all-inclusive gathering space for our amazing mountain community!</p>
+            <p class="desc">We're a bit untraditional in the fact that we're only open to the public one day a week.</p>
+            <p class="desc">Each Friday from 8:00am to 2:00pm we eagerly open our doors to serve our friends and family fresh baked breads and pastries. Be sure to check back each week for our updated menu items.</p>
+        </div>
+        <hr class="lines">
+        <section class="footer">
+            <div class="footer-div">
+                <h2>Address</h2>
+                <p>10736 Pioneer Trail</p>
+                <p>Suite 12</p>
+                <p>​Truckee, CA 96161</p>
+            </div>
+            <div class="footer-div">
+                <h2>Hours</h2>
+                <p>Fridays 8:00 am - 2:00 pm</p>
+            </div>
+            <div class="footer-div">
+                <h2>Contact</h2>
+                <p>info@sierrabakehouse.com</p>
+                <p>(530) 562-9494</p>
+            </div>
+        </section>
         <script src="scripts/main.js"></script>
 
     </body>
