--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sierra Bakehouse</title>
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="site-header-container">
@@ -26,6 +29,24 @@
                 <p class="hero-subtitle">Small-batch artisanal goods crafted in the Sierra.</p>
             </section>
         </div>
+
+        <section class="footer">
+            <div class="footer-div">
+                <h2>Address</h2>
+                <p>10736 Pioneer Trail</p>
+                <p>Suite 12</p>
+                <p>​Truckee, CA 96161</p>
+            </div>
+            <div class="footer-div">
+                <h2>Hours</h2>
+                <p>Fridays 8:00 am - 2:00 pm</p>
+            </div>
+            <div class="footer-div">
+                <h2>Contact</h2>
+                <p>info@sierrabakehouse.com</p>
+                <p>(530) 562-9494</p>
+            </div>
+        </section>
         <script src="scripts/main.js"></script>
 
     </body>
