all aspects of menu are dynamically added now.  added a new part of footer that includes location, customer testimonials, and space for newsletter.

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="site-header-container">
@@ -47,6 +48,25 @@
                 <p>(530) 562-9494</p>
             </div>
         </section>
+        <div class="bottom">
+            <section class="footer2">
+            <div class="footer-div">
+                <h2>Location</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1754.031980038898!2d-120.18276583992645!3d39.33663772732307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809bdfe80f7b05ab%3A0x6db3e8ad6e852716!2sSierra%20Bakehouse!5e0!3m2!1sen!2sus!4v1765342975925!5m2!1sen!2sus"
+                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+            <div class="footer-div">
+                <h2>What Customers Say</h2>
+                <p>"The word 'unique' barely scratches the surface with this place. The flavors that come from their goods both sweet and savory are beyond any other bakery. You wait in line because it’s worth it! Truly a special place!" - Joel C.</p>
+                <p>​"The most amazing bakery, with creative and delicious pastries, breads and sandwiches. Everything was made perfectly! I would highly recommend." - Rebecca Marsh</p>
+            </div>
+            <div class="footer-div">
+                <h2>Sign Up For Our Weekly Newsletter!</h2>
+                <p><i>*INDICATES REQUIRED FIELD</i></p>
+            </div>
+            </section>
+        </div>
         <script src="scripts/main.js"></script>
 
     </body>
