--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -32,148 +33,8 @@
             </section>
         </div>
 
-        <section class="menu-section">
-            <div class="tab">
-                <button class="tablinks" onclick="openTable(event, 'Croissants')">Croissants</button>
-                <button class="tablinks" onclick="openTable(event, 'Breakfast Pastries')">Breakfast Pastries</button>
-                <button class="tablinks" onclick="openTable(event, 'Savory Items')">Savory Items</button>
-                <button class="tablinks" onclick="openTable(event, 'Sweets')">Sweets</button>
-                <button class="tablinks" onclick="openTable(event, 'Bars')">Bars</button>
-            </div>
-            <div id="Croissants" class="menu-grid">
-                <span onclick="closeTab(this)" class="topright">&times</span>
-                <h2>Croissants | $8</h2>
-                <div class="menu-item">
-                    <h3>Chocolate</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Milk Chocolate Pear</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Harissa Mushroom Goat Cheese</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Ham and Cheddar</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Rosemary Parmesan</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Mexican Mocha Morning Bun</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-            </div>
-            <div id="Breakfast Pastries" class="menu-grid">
-                <span onclick="closeTab(this)" class="topright">&times</span>
-                <h2>Breakfast Pastries | $6</h2>
-                <div class="menu-item">
-                    <h3>Pear and Cranberry Scone</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Cinnamon Bun with Vanilla Glaze</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Herby Gruyere Scone</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-            </div>
-            <div id="Savory Items" class="menu-grid">
-                <span onclick="closeTab(this)" class="topright">&times</span>
-                <h2>Savory Items</h2>
-                <div class="menu-item">
-                    <h3>Butternut, Mushroom, Kale, Gruyere Cheese Quiche</h3>
-                    <p>Whole: $35 | Slice: $7</p>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Schiacciata with Spinach, Onion, Mozzarella, and Potato</h3>
-                    <p>$10</p>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Meat, Veggie, or Vegan Pizza</h3>
-                    <p>$8</p>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Traditional Onion and Poppy Bialy</h3>
-                    <p>$6</p>
-                    <p>A lovely description of this item, and it's vegan!</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Pork Pot Sticker Hand Pie with Ponzu Soy Dippies</h3>
-                    <p>$14</p>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Indian Masala Stromboli- Potatoes, Cauliflower, Peas, Chickpeas, Paneer Cheese in a Masala Curry</h3>
-                    <p>$15</p>
-                    <p>A lovely description of this item</p>
-                </div>
-            </div>
-            <div id="Sweets" class="menu-grid">
-                <span onclick="closeTab(this)" class="topright">&times</span>
-                <h2>Sweets | $8</h2>
-                <div class="menu-item">
-                    <h3>Chocolate</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Milk Chocolate Pear</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Harissa Mushroom Goat Cheese</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Ham and Cheddar</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Rosemary Parmesan</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Mexican Mocha Morning Bun</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-            </div>
-            <div id="Bars" class="menu-grid">
-                <span onclick="closeTab(this)" class="topright">&times</span>
-                <h2>Bars | $5</h2>
-                <div class="menu-item">
-                    <h3>Chocolate</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Milk Chocolate Pear</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Harissa Mushroom Goat Cheese</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Ham and Cheddar</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Rosemary Parmesan</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-                <div class="menu-item">
-                    <h3>Mexican Mocha Morning Bun</h3>
-                    <p>A lovely description of this item</p>
-                </div>
-            </div>
+        <section id="menu-section" class="menu-section">
+            <div class="tab" id="tab-buttons"></div>
             <div class="notice">
                 <h3>Please choose a menu category above to see your options for today!</h3>
             </div>
@@ -196,6 +57,25 @@
                 <p>(530) 562-9494</p>
             </div>
         </section>
+        <div class="bottom">
+            <section class="footer2">
+            <div class="footer-div">
+                <h2>Location</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1754.031980038898!2d-120.18276583992645!3d39.33663772732307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809bdfe80f7b05ab%3A0x6db3e8ad6e852716!2sSierra%20Bakehouse!5e0!3m2!1sen!2sus!4v1765342975925!5m2!1sen!2sus"
+                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+            <div class="footer-div">
+                <h2>What Customers Say</h2>
+                <p>"The word 'unique' barely scratches the surface with this place. The flavors that come from their goods both sweet and savory are beyond any other bakery. You wait in line because it’s worth it! Truly a special place!" - Joel C.</p>
+                <p>​"The most amazing bakery, with creative and delicious pastries, breads and sandwiches. Everything was made perfectly! I would highly recommend." - Rebecca Marsh</p>
+            </div>
+            <div class="footer-div">
+                <h2>Sign Up For Our Weekly Newsletter!</h2>
+                <p><i>*INDICATES REQUIRED FIELD</i></p>
+            </div>
+            </section>
+        </div>
         <script src="scripts/main.js"></script>
 
     </body>
